--- a/layouts/default.html
+++ b/layouts/default.html
@@ -6,6 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			Is this working?
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
@@ -15,7 +16,7 @@
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+			Hello
 			{{ content }}
 			
 			</div><!-- /.container -->
